Updated POM by removing memory segment
Updated POM by removing memory segment